<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/action_change_color"
        android:icon="@drawable/ic_change_color"
        android:id="@+id/menu_nav_change_color" />
    <item android:title="@string/action_stroke_width"
        android:icon="@drawable/ic_add"
        android:id="@+id/menu_nav_change_size"/>
    <item android:title="@string/action_eraser"
        android:icon="@drawable/ic_add"
        android:id="@+id/menu_nav_switch_eraser"/>
    <item android:title="@string/action_save"
        android:icon="@drawable/ic_add"
        android:id="@+id/menu_nav_save"/>
    <item android:title="@string/action_image"
        android:icon="@drawable/ic_add"
        android:id="@+id/menu_nav_load_image"/>
    <item android:title="@string/action_text"
        android:icon="@drawable/ic_add"
        android:id="@+id/menu_nav_insert_text"/>
</menu>